--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   },
   "engines": {
